[gd_scene load_steps=14 format=2]

[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level2.gd" type="Script" id=2]
[ext_resource path="res://PongStick.tscn" type="PackedScene" id=3]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level1Room.tres" type="TileSet" id=5]
[ext_resource path="res://blackShader.gdshader" type="Shader" id=6]
[ext_resource path="res://Backgroung.tscn" type="PackedScene" id=7]
[ext_resource path="res://PongBall.tscn" type="PackedScene" id=8]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=9]
[ext_resource path="res://EnemyStick.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment(){
  COLOR = vec4(0.0, 0.06, 0.0, 0.7);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )

[node name="Level2" type="Node2D"]
script = ExtResource( 2 )

[node name="Backgroung" parent="." instance=ExtResource( 7 )]

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 256, 640 )

[node name="Net" type="TileMap" parent="."]
material = SubResource( 3 )
position = Vector2( -8, 0 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 17170564, 2, 0, 17563780, 2, 0, 17956996, 2, 0, 18350212, 2, 0, 18743428, 2, 0, 19136644, 2, 0, 19529860, 2, 0, 19923076, 2, 0, 20316292, 2, 0, 20709508, 2, 0, 21102724, 2, 0, 21495940, 2, 0, 21889156, 2, 0, 22282372, 2, 0, 22675588, 2, 0, 23068804, 2, 0, 23462020, 2, 0, 23855236, 2, 0, 24248452, 2, 0, 24641668, 2, 0 )

[node name="NetCurtain" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 255.0
margin_top = 513.0
margin_right = 261.0
margin_bottom = 756.0
rect_pivot_offset = Vector2( 3, 243 )
color = Color( 0.00784314, 0.145098, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 4 )]
material = SubResource( 1 )
tile_data = PoolIntArray( -10158231, 0, 0, 16318455, 3, 0, 16252928, 0, 0, 16253152, 3, 0, 16842743, 1, 0, 16777479, 1, 0, 25034743, 3, 0, 24969216, 3, 0, 24969265, 3, 0, 24969290, 3, 0, 24969339, 2, 0, 24969340, 2, 0, 24969342, 2, 0, 24969343, 2, 0, 24969344, 2, 0, 24969345, 2, 0, 24969346, 2, 0, 24969348, 2, 0, 24969349, 2, 0, 24969350, 2, 0, 24969351, 3, 0, 24969401, 3, 0, 24969451, 3, 0, 25034875, 2, 0, 25034877, 2, 0, 25034882, 2, 0, 25034883, 2, 0, 25034884, 2, 0, 25034885, 2, 0, 25034886, 2, 0, 25100412, 2, 0, 25100414, 2, 0, 25100415, 2, 0, 25100416, 2, 0, 25100417, 2, 0, 25100418, 2, 0, 25100419, 2, 0, 25100421, 2, 0, 25165949, 2, 0, 25165951, 2, 0, 25165952, 2, 0, 25165953, 2, 0, 25165954, 2, 0, 25165956, 2, 0, 25231484, 2, 0, 25231486, 2, 0, 25231491, 2, 0, 25231493, 2, 0, 25231494, 2, 0, 25297020, 2, 0, 25297023, 2, 0, 25297025, 2, 0, 25297026, 2, 0, 25297029, 2, 0, 25362556, 2, 0, 25362557, 2, 0, 25362564, 2, 0, 25362565, 2, 0, 25428095, 2, 0, 25428096, 2, 0, 25428097, 2, 0, 25428098, 2, 0, 25428099, 2, 0, 25428100, 2, 0, 25493628, 2, 0, 25493629, 2, 0, 25493630, 2, 0, 25493631, 2, 0, 25493632, 2, 0, 25493633, 2, 0, 25493634, 2, 0, 25493635, 2, 0, 25493636, 2, 0, 25493637, 2, 0 )

[node name="PongStick" parent="." instance=ExtResource( 3 )]
position = Vector2( 12, 620 )

[node name="Ball" parent="." instance=ExtResource( 9 )]
position = Vector2( 258, 520 )

[node name="PongBall" parent="." instance=ExtResource( 8 )]
position = Vector2( 258, 759 )
gravity_scale = -1.0

[node name="EnemyStick" parent="." instance=ExtResource( 10 )]
position = Vector2( 524, 621 )

[connection signal="curtain_is_up" from="." to="." method="_on_Level2_curtain_is_up" flags=7]
[connection signal="score_updated" from="." to="Ball" method="_on_Level2_score_updated" flags=7]
[connection signal="enemy_has_scored" from="Ball" to="." method="_on_Ball_enemy_has_scored" flags=7]
[connection signal="player_has_scored" from="Ball" to="." method="_on_Ball_player_has_scored" flags=7]
[connection signal="can_replace_ball" from="PongBall" to="Ball" method="_on_PongBall_can_replace_ball" flags=7]
[connection signal="glow_ended" from="PongBall" to="EnemyStick" method="_on_PongBall_glow_ended" flags=7]
[connection signal="glow_started" from="PongBall" to="EnemyStick" method="_on_PongBall_glow_started" flags=7]
